# colorcode

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: options.cmake
src/: CMakeLists.txt  args.hpp  colormap.cpp  colormap.hpp  err.hpp  gentext.py  main.cpp
